# docs/swagger.yaml
@@ -33,6 +33,60 @@ definitions:
         description: 更新时间
         type: string
     type: object
+  models.SysDictData:
+    properties:
+      createBy:
+        description: 创建者
+        type: string
+      createdAt:
+        description: 创建时间
+        type: string
+      dictLabel:
+        description: 字典标签
+        type: string
+      dictSort:
+        description: 字典排序
+        type: integer
+      dictValue:
+        description: 字典键值
+        type: string
+      id:
+        description: 主键
+        type: integer
+      remark:
+        description: 备注
+        type: string
+      status:
+        description: 启用状态 0 启用 1 禁用
+        type: boolean
+      updatedAt:
+        description: 更新时间
+        type: string
+    type: object
+  models.SysDictType:
+    properties:
+      createdAt:
+        description: 创建时间
+        type: string
+      dictName:
+        description: 字典名称
+        type: string
+      dictType:
+        description: 字典类型
+        type: string
+      id:
+        description: 主键
+        type: integer
+      remark:
+        description: 备注
+        type: string
+      status:
+        description: 启用状态 0 启用 1 禁用
+        type: boolean
+      updatedAt:
+        description: 更新时间
+        type: string
+    type: object
   models.SysMenu:
     properties:
       component:
@@ -213,6 +267,42 @@ definitions:
         description: 启用状态 0 启用 1 禁用
         type: boolean
     type: object
+  request.CreateDictDataRequest:
+    properties:
+      createBy:
+        description: 创建者
+        type: string
+      dictLabel:
+        description: 字典标签
+        type: string
+      dictSort:
+        description: 字典排序
+        type: integer
+      dictValue:
+        description: 字典键值
+        type: string
+      remark:
+        description: 备注
+        type: string
+      status:
+        description: 启用状态 0 启用 1 禁用
+        type: boolean
+    type: object
+  request.CreateDictTypeRequest:
+    properties:
+      dictName:
+        description: 字典名称
+        type: string
+      dictType:
+        description: 字典类型
+        type: string
+      remark:
+        description: 备注
+        type: string
+      status:
+        description: 启用状态 0 启用 1 禁用
+        type: boolean
+    type: object
   request.CreateMenuRequest:
     properties:
       component:
@@ -366,6 +456,46 @@ definitions:
       phone:
         description: 联系电话
         type: string
+      remark:
+        description: 备注
+        type: string
+      status:
+        description: 启用状态 0 启用 1 禁用
+        type: boolean
+    type: object
+  request.UpdateDictDataRequest:
+    properties:
+      createBy:
+        description: 创建者
+        type: string
+      dictLabel:
+        description: 字典标签
+        type: string
+      dictSort:
+        description: 字典排序
+        type: integer
+      dictValue:
+        description: 字典键值
+        type: string
+      id:
+        type: integer
+      remark:
+        description: 备注
+        type: string
+      status:
+        description: 启用状态 0 启用 1 禁用
+        type: boolean
+    type: object
+  request.UpdateDictTypeRequest:
+    properties:
+      dictName:
+        description: 字典名称
+        type: string
+      dictType:
+        description: 字典类型
+        type: string
+      id:
+        type: integer
       remark:
         description: 备注
         type: string
@@ -618,6 +748,220 @@ paths:
       summary: 更新部门
       tags:
       - 部门管理
+  /dictData/create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 创建字典数据
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.CreateDictDataRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            $ref: '#/definitions/result.HttpResult'
+      summary: 创建字典数据
+      tags:
+      - 数据字典数据
+  /dictData/delete/{id}:
+    delete:
+      parameters:
+      - description: 字典数据id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: desc
+          schema:
+            $ref: '#/definitions/result.HttpResult'
+      summary: 删除字典数据
+      tags:
+      - 数据字典数据
+  /dictData/info/{id}:
+    get:
+      parameters:
+      - description: 字典数据id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: desc
+          schema:
+            $ref: '#/definitions/result.HttpResult'
+      summary: 字典数据详情
+      tags:
+      - 数据字典数据
+  /dictData/page:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            allOf:
+            - $ref: '#/definitions/result.HttpResult'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/response.PageResponse'
+                  - properties:
+                      list:
+                        items:
+                          $ref: '#/definitions/models.SysDictData'
+                        type: array
+                    type: object
+              type: object
+      summary: 字典数据列表
+      tags:
+      - 数据字典数据
+  /dictData/update:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: 更新字典数据
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateDictDataRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            $ref: '#/definitions/result.HttpResult'
+      summary: 更新字典数据
+      tags:
+      - 数据字典数据
+  /dictType/create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 创建字典类型
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.CreateDictTypeRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            $ref: '#/definitions/result.HttpResult'
+      summary: 创建字典类型
+      tags:
+      - 数据字典类型
+  /dictType/delete/{id}:
+    delete:
+      parameters:
+      - description: 字典类型id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: desc
+          schema:
+            $ref: '#/definitions/result.HttpResult'
+      summary: 删除字典类型
+      tags:
+      - 数据字典类型
+  /dictType/info/{id}:
+    get:
+      parameters:
+      - description: 字典类型id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: desc
+          schema:
+            $ref: '#/definitions/result.HttpResult'
+      summary: 字典类型详情
+      tags:
+      - 数据字典类型
+  /dictType/page:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            allOf:
+            - $ref: '#/definitions/result.HttpResult'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/response.PageResponse'
+                  - properties:
+                      list:
+                        items:
+                          $ref: '#/definitions/models.SysDictType'
+                        type: array
+                    type: object
+              type: object
+      summary: 字典类型列表
+      tags:
+      - 数据字典类型
+  /dictType/update:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: 更新字典类型
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateDictTypeRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            $ref: '#/definitions/result.HttpResult'
+      summary: 更新字典类型
+      tags:
+      - 数据字典类型
   /login/sign:
     post:
       parameters:
